cmake_minimum_required(VERSION 2.8)

SET(DIR_RAIZ ${CMAKE_CURRENT_SOURCE_DIR})
SET(DOXY_CONFIG_DIR ${DIR_RAIZ}/Documentacion/Doxy/)
SET(DOXY_CONFIG ${DIR_RAIZ}/Doxyfile.in)
INCLUDE(${DIR_RAIZ}/genDoc.cmake)

#MESSAGE( STATUS "el dir raiz es: " ${DIR_RAIZ} )


ADD_SUBDIRECTORY(precompilador)
ADD_SUBDIRECTORY(pr)
ADD_SUBDIRECTORY(pr-zip)
ADD_SUBDIRECTORY(parserPHP)
ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(cliente)
ADD_SUBDIRECTORY(servidor)

#GENERATE_DOCUMENTATION(nombre proyecto -- ruta doxyfile.in outputDir) el archivo doxy debe estar en el mismo path que el input source

#Precompilador
SET(DIR_ABSOLUTA_DOXYFILE ${DIR_RAIZ}/precompilador/)
GENERATE_DOCUMENTATION(Precompilador ${DIR_ABSOLUTA_DOXYFILE})
#Pr
SET(DIR_ABSOLUTA_DOXYFILE ${DIR_RAIZ}/pr/)
GENERATE_DOCUMENTATION(CGI_Precompilador ${DIR_ABSOLUTA_DOXYFILE})
#Pr-zip
SET(DIR_ABSOLUTA_DOXYFILE ${DIR_RAIZ}/pr-zip/)
GENERATE_DOCUMENTATION(Pr-Zip ${DIR_ABSOLUTA_DOXYFILE})
#ParserPHP
SET(DIR_ABSOLUTA_DOXYFILE ${DIR_RAIZ}/parserPHP/)
GENERATE_DOCUMENTATION(ParserPHP ${DIR_ABSOLUTA_DOXYFILE})
#common
SET(DIR_ABSOLUTA_DOXYFILE ${DIR_RAIZ}/common/)
GENERATE_DOCUMENTATION(Common ${DIR_ABSOLUTA_DOXYFILE})
#servidor
SET(DIR_ABSOLUTA_DOXYFILE ${DIR_RAIZ}/servidor/)
GENERATE_DOCUMENTATION(ServidorMapache ${DIR_ABSOLUTA_DOXYFILE})
#cliente
SET(DIR_ABSOLUTA_DOXYFILE ${DIR_RAIZ}/cliente/)
GENERATE_DOCUMENTATION(ConfiguradorCliente ${DIR_ABSOLUTA_DOXYFILE})
