PROJECT(Server)
ADD_SUBDIRECTORY(utils)
ADD_SUBDIRECTORY(protocoloHTTP)
INCLUDE_DIRECTORIES(${DIR_RAIZ}/common/configuraciones)
INCLUDE_DIRECTORIES(${DIR_RAIZ}/common/threads)
INCLUDE_DIRECTORIES(${DIR_RAIZ}/common/sockets)
INCLUDE_DIRECTORIES(${DIR_RAIZ}/common/sockets/exceptions)
INCLUDE_DIRECTORIES(${DIR_RAIZ}/common/protocoloControl)
INCLUDE_DIRECTORIES(${DIR_RAIZ}/servidor/utils)
INCLUDE_DIRECTORIES(${DIR_RAIZ}/servidor/protocoloHTTP)
INCLUDE_DIRECTORIES(/usr/local/lib) #log4cpp
SET(EXECUTABLE_OUTPUT_PATH ${DIR_RAIZ})
ADD_EXECUTABLE(ServidorMapache mainServidor.cpp AdministradorClientes IProcesador ManejadorClienteHTTP ProcesadorCGI ProcesadorRequest ProcesadorTipoEstatico Servidor ServidorHttp VerificadorTimeOut)
TARGET_LINK_LIBRARIES(ServidorMapache configuraciones utils protocoloHTTP threads sockets exceptions protocoloControl tinyxml log4cpp pthread)
